--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1 class="lead__title">From Homeland to Homeland</h1>
         <p class="lead__subtitle">An epic journey from Kentucky to Burundi through Wales and Ukraine</p>
         <img class="lead__image" src="images/lead.png" alt="Lead image" />
-
+        </section>
 
         <section class="intro">
           <h2 class="intro__title">
@@ -38,6 +38,7 @@
             your hometown to our collection. No matter where you're from, we're glad that you're our neighbor.
           </p>
         </section>
+
         <section class="photo-grid">
           <img src="images/photo-grid_image1.png" alt="town along the sea on cloudy and rainy day"
             class="photo-grid__item" />
@@ -50,10 +51,10 @@
           <img src="images/photo-grid_image7.png" alt="manmade hut with owner in front" class="photo-grid__item" />
           <img src="images/photo-grid_image8.png" alt="houses in construction on hill top" class="photo-grid__item" />
         </section>
+
         <section class="places">
           <article class="place">
             <h2 class="place__title">Kyiv, Ukraine</h2>
-
             <div class="place__website">
               <p class="place__website-url">Artist</p>
               <p class="place__website-link">
@@ -119,7 +120,6 @@
           </article>
           <article class="place">
             <h2 class="place__title">New Berea, USA</h2>
-
             <div class="place__website">
               <p class="place__website-url">Artist</p>
               <p class="place__website-link">
@@ -151,7 +151,6 @@
           </article>
           <article class="place">
             <h2 class="place__title">Muramvya, Burundi</h2>
-
             <div class="place__website">
               <p class="place__website-url">Artist</p>
               <p class="place__website-link">
