update css rules

--- a/index.html
+++ b/index.html
@@ -196,10 +196,10 @@
           <div class="place__website">
             <p class="place__website-url">Artist</p>
             <p class="place__website-link">
-              Aleksandra Tokareva, QA engineer
+              Aleksandra Tokareva, Mountain lover
             </p>
           </div>
-          <img src="images/place_5_image.png" alt="Taos City" class="place__image" />
+          <img src="images/place_6_image.png" alt="Taos City" class="place__image" />
           <a class="button" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Buy
             This artwork
             as NFT</a>
