--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           </div>
           <img src="images/place_1_image.png" alt="Kyiv City" class="place__image" />
           <a class="button" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Buy
-            This artwork
+            this artwork
             as NFT</a>
           <div class="place__paragraphs">
             <p class="place__paragraph">
@@ -97,7 +97,7 @@
           </div>
           <img src="images/place_2_image.png" alt="Cricieth City" class="place__image" />
           <a class="button" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Buy
-            This artwork
+            this artwork
             as NFT</a>
           <div class="place__paragraphs">
             <p class="place__paragraph">
@@ -129,7 +129,7 @@
           </div>
           <img src="images/place_3_image.png" alt="New Berea City" class="place__image" />
           <a class="button" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Buy
-            This artwork
+            this artwork
             as NFT</a>
           <div class="place__paragraphs">
             <p class="place__paragraph">
@@ -161,7 +161,7 @@
           </div>
           <img src="images/place_4_image.png" alt="Burundi City" class="place__image" />
           <a class="button" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Buy
-            This artwork
+            this artwork
             as NFT</a>
           <div class="place__paragraphs">
             <p class="place__paragraph">
@@ -201,7 +201,7 @@
           </div>
           <img src="images/place_6_image.png" alt="Taos City" class="place__image" />
           <a class="button" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Buy
-            This artwork
+            this artwork
             as NFT</a>
           <div class="place__paragraphs">
             <p class="place__paragraph">
@@ -225,7 +225,7 @@
         <h2 class="cover__title">Visit Us</h2>
         <p class="cover__subtitle">Year-round Practicum&nbsp;Art&nbsp;Gallery 404&nbsp;Tim&nbsp;Berners-Lee Ave</p>
         <a href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-          class="button cover__button">Buy Tickets</a>
+          class="button cover__button">Buy tickets</a>
       </section>
     </main>
     <footer class="footer">
