update cover__button, place, places, index.html

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
           <div class="place__website">
             <p class="place__website-url">Artist</p>
             <p class="place__website-link">
-              Aleksandra Tokareva, Mountain lover
+              Aleksandra Tokareva, mountain lover
             </p>
           </div>
           <img src="images/place_6_image.png" alt="Taos City" class="place__image" />
@@ -225,7 +225,7 @@
         <h2 class="cover__title">Visit Us</h2>
         <p class="cover__subtitle">Year-round Practicum&nbsp;Art&nbsp;Gallery 404&nbsp;Tim&nbsp;Berners-Lee Ave</p>
         <a href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-          class="button cover__button">Buy tickets</a>
+          class="cover__button button">Buy tickets</a>
       </section>
     </main>
     <footer class="footer">
